# FakaManGame

./: CMakeLists.txt  README.md
GraphicsProject/: GraphicsProject  Test  Test.cpp  TestPart  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  Voice 010_001.m4a  controls.cpp  textf.fragmentshader  textv.vertexshader
GraphicsProject/Car/: BigCar.mtl  CarPlace (copy).mtl  CarPlace.mtl
GraphicsProject/Coins/: CoinNew.mtl  CoinsNews.mtl
GraphicsProject/FirstMenu/: FirstMenuNew.mtl  FirstMenuNew2.mtl
GraphicsProject/Magnet/: Magnet.mtl  MagnetNew.mtl
GraphicsProject/RoadBlock/: untitled.mtl
GraphicsProject/Skate/: NewSkateDola.mtl
GraphicsProject/Sky/: BigSky.mtl
common/: CMakeLists.txt  controls.cpp  objloader.cpp
